# gitcord

./: .gitignore  Cargo.toml  botconfig_example.json
src/: commands.rs  main.rs  utils.rs
